--- a/Defining_Functions_in_Python.ipynb
+++ b/Defining_Functions_in_Python.ipynb
@@ -607,8 +607,8 @@
         "        return b\n",
         "\n",
         "# Test the function\n",
-        "print(find_maximum(10, 20))    # Output: 20\n",
-        "print(find_maximum(7.5, 7.2))  # Output: 7.5"
+        "print(find_maximum(10, 20))    
+        "print(find_maximum(7.5, 7.2))  
       ],
       "metadata": {
         "id": "NvN6SF7c1kZ_",
@@ -698,10 +698,10 @@
         "    return s[::-1]\n",
         "\n",
         "# Test cases\n",
-        "print(reverse_string(\"hello\"))       # Output: \"olleh\"\n",
-        "print(reverse_string(\"Python\"))      # Output: \"nohtyP\"\n",
-        "print(reverse_string(\"12345\"))       # Output: \"54321\"\n",
-        "print(reverse_string(\"\"))            # Output: \"\""
+        "print(reverse_string(\"hello\"))       
+        "print(reverse_string(\"Python\"))      
+        "print(reverse_string(\"12345\"))       
+        "print(reverse_string(\"\"))            
       ],
       "metadata": {
         "id": "ImTn1U1K1wBo",
@@ -749,10 +749,10 @@
         "    return count\n",
         "\n",
         "# Test cases\n",
-        "print(count_vowels(\"Hello World\"))     # Output: 3\n",
-        "print(count_vowels(\"Python\"))          # Output: 1\n",
-        "print(count_vowels(\"AEIOU\"))          # Output: 5\n",
-        "print(count_vowels(\"xyz\"))            # Output: 0"
+        "print(count_vowels(\"Hello World\"))    
+        "print(count_vowels(\"Python\"))        
+        "print(count_vowels(\"AEIOU\"))         
+        "print(count_vowels(\"xyz\"))            
       ],
       "metadata": {
         "id": "HMvikNJB11Av",
